# agents-on-docker

./: .gitignore  CONTRIBUTING.md  README.md
agent-docker-v1/: Dockerfile  compose.openai.yaml
agent-docker-v7/: .dockerignore  README.md  agent.py  compose.yaml  simple_agent.py
examples/: README.md
examples/agent-with-mcp/: README.md
examples/agent-with-mcp/agent-docker-v7/: .gitignore  Dockerfile  README.md  agent.py  compose.openai.yaml  compose.yaml  pyproject.toml
examples/basic-agent/: README.md
examples/basic-agent/agent-docker-v1/: Dockerfile  README.md  agent.py  compose.openai.yaml  compose.yaml  pyproject.toml
modules/: README.md
modules/module-1-foundations/: content.md  diagrams.md
modules/module-1-foundations/exercises/: README.md  setup-guide.md  troubleshooting-guide.md  validation-exercise.md
modules/module-2-basic-agent/: README.md  content.md
modules/module-2-basic-agent/exercises/: README.md  exercise-1-first-agent.md  exercise-2-development-workflow.md
modules/module-3-external-tools/: README.md  content.md
modules/module-3-external-tools/exercises/: exercise-1-mcp-setup.md  exercise-2-secrets-management.md  exercise-3-custom-tools.md
